Fixed horizontal scroll.

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,7 @@
 }
 
 body {
-  margin-bottom: 20px;
-  max-width: 800px;
+  margin: 0;
 }
 
 h1 {
